--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 $ cat .gitattributes
 *.js linguist-language=Python
-*.css linguist-language=Python
+*.ipynb linguist-language=Python
 *.python linguist-detectable=true
